<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:id="@+id/appBarLayout">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/layout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_detail"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/marked"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:src="@drawable/ic_unfavorite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/full_name"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/image_detail"
                    app:layout_constraintStart_toStartOf="@+id/image_detail"
                    app:layout_constraintTop_toBottomOf="@+id/image_detail" />

                <ImageView
                    android:id="@+id/img_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_baseline_my_location_24"
                    app:layout_constraintEnd_toEndOf="@+id/image_detail"
                    app:layout_constraintStart_toStartOf="@+id/image_detail"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <TextView
                    android:id="@+id/loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/count_repository"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/img_loc"
                    app:layout_constraintStart_toStartOf="@id/img_loc"
                    app:layout_constraintTop_toBottomOf="@+id/img_loc" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintTop_toBottomOf="@+id/loc">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">
                        <!--Followers-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_follower"
                                android:textColor="@android:color/black"
                                android:textSize="10sp"
                                tools:ignore="HardcodedText,SmallSp" />

                            <TextView
                                android:id="@+id/txt_follower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/count_follower"
                                android:textColor="@android:color/black"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText,SmallSp" />
                        </LinearLayout>
                        <!--Following-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_following"
                                android:textColor="@android:color/black"
                                android:textSize="10sp"
                                tools:ignore="HardcodedText,SmallSp" />

                            <TextView
                                android:id="@+id/txt_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/count_following"
                                android:textColor="@android:color/black"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText,SmallSp" />
                        </LinearLayout>
                        <!--Repository-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/title_repo"
                                android:textColor="@android:color/black"
                                android:textSize="10sp"
                                tools:ignore="HardcodedText,SmallSp" />

                            <TextView
                                android:id="@+id/txt_repository"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/count_repository"
                                android:textColor="@android:color/black"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText,SmallSp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <include
                    android:id="@+id/progressBar"
                    layout="@layout/progress_bar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_profile"
            app:tabTextColor="@android:color/black" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>